# simple_shell

./: AUTHORS  CMakeLists.txt  README.md  a.out  casePipe.c  casePipe.h  functions.c  functions.h  hsh  inputHandling.c  inputHandling.h  main.c  main.h  moreUtilities.c  moreUtilities.h  myGetline.c  myGetline.h  pathHandling.c  pathHandling.h  separatedMain.c  shell  systemCalls.c  systemCalls.h  utilities.c  utilities.h
